updated commit 18/01/22 1:40am

--- a/shibex-frontend/src/components/css_files/navbar.css
+++ b/shibex-frontend/src/components/css_files/navbar.css
@@ -2,3 +2,12 @@
   width: 2.5em;
   height: 2.5em;
 }
+.navbarColor {
+  background-color: #fcd032;
+}
+.nav-item .navLinkColor {
+  color: rgb(12, 188, 167);
+}
+.nav-item .navLinkColor:hover {
+  color: red;
+}
