--- a/shibex-soliders0022/shibex-soliders-main-main/shibex-soliders-main-main/src/components/css_files/roadmap.css
+++ b/shibex-soliders0022/shibex-soliders-main-main/shibex-soliders-main-main/src/components/css_files/roadmap.css
@@ -550,15 +550,15 @@ user agent stylesheet ol {
   position: relative;
   margin-bottom: 1.5rem;
 }
-[data-aos][data-aos][data-aos-easing="ease"],
-body[data-aos-easing="ease"] [data-aos] {
+[data-aos][data-aos][data-aos-easing='ease'],
+body[data-aos-easing='ease'] [data-aos] {
   transition-timing-function: ease;
 }
-[data-aos][data-aos][data-aos-duration="400"],
-body[data-aos-duration="400"] [data-aos] {
+[data-aos][data-aos][data-aos-duration='400'],
+body[data-aos-duration='400'] [data-aos] {
   transition-duration: 0.4s;
 }
-[data-aos^="fade"][data-aos^="fade"] {
+[data-aos^='fade'][data-aos^='fade'] {
   opacity: 0;
   transition-property: opacity, transform;
 }
@@ -572,7 +572,7 @@ body[data-aos-duration="400"] [data-aos] {
   display: flex;
   align-items: center;
 }
-[data-aos="fade-left"] {
+[data-aos='fade-left'] {
   transform: translate3d(100px, 0, 0);
 }
 *,
@@ -595,7 +595,7 @@ user agent stylesheet ol {
   list-style-type: decimal;
 }
 /* ################ */
-[data-aos^="fade"][data-aos^="fade"].aos-animate {
+[data-aos^='fade'][data-aos^='fade'].aos-animate {
   opacity: 1;
   transform: translateZ(0);
 }
@@ -609,15 +609,15 @@ user agent stylesheet ol {
   position: relative;
   margin-bottom: 1.5rem;
 }
-[data-aos][data-aos][data-aos-easing="ease"],
-body[data-aos-easing="ease"] [data-aos] {
+[data-aos][data-aos][data-aos-easing='ease'],
+body[data-aos-easing='ease'] [data-aos] {
   transition-timing-function: ease;
 }
-[data-aos][data-aos][data-aos-duration="400"],
-body[data-aos-duration="400"] [data-aos] {
+[data-aos][data-aos][data-aos-duration='400'],
+body[data-aos-duration='400'] [data-aos] {
   transition-duration: 0.4s;
 }
-[data-aos^="fade"][data-aos^="fade"] {
+[data-aos^='fade'][data-aos^='fade'] {
   opacity: 0;
   transition-property: opacity, transform;
 }
@@ -631,7 +631,7 @@ body[data-aos-duration="400"] [data-aos] {
   display: flex;
   align-items: center;
 }
-[data-aos="fade-left"] {
+[data-aos='fade-left'] {
   transform: translate3d(100px, 0, 0);
 }
 *,
@@ -653,7 +653,7 @@ user agent stylesheet li {
 user agent stylesheet ol {
   list-style-type: decimal;
 }
-[data-aos^="fade"][data-aos^="fade"].aos-animate {
+[data-aos^='fade'][data-aos^='fade'].aos-animate {
   opacity: 1;
   transform: translateZ(0);
 }
@@ -676,15 +676,15 @@ user agent stylesheet ol {
   position: relative;
   margin-bottom: 1.5rem;
 }
-[data-aos][data-aos][data-aos-easing="ease"],
-body[data-aos-easing="ease"] [data-aos] {
+[data-aos][data-aos][data-aos-easing='ease'],
+body[data-aos-easing='ease'] [data-aos] {
   transition-timing-function: ease;
 }
-[data-aos][data-aos][data-aos-duration="400"],
-body[data-aos-duration="400"] [data-aos] {
+[data-aos][data-aos][data-aos-duration='400'],
+body[data-aos-duration='400'] [data-aos] {
   transition-duration: 0.4s;
 }
-[data-aos^="fade"][data-aos^="fade"] {
+[data-aos^='fade'][data-aos^='fade'] {
   opacity: 0;
   transition-property: opacity, transform;
 }
@@ -698,7 +698,7 @@ body[data-aos-duration="400"] [data-aos] {
   display: flex;
   align-items: center;
 }
-[data-aos="fade-right"] {
+[data-aos='fade-right'] {
   transform: translate3d(-100px, 0, 0);
 }
 *,
@@ -720,7 +720,7 @@ user agent stylesheet li {
 user agent stylesheet ol {
   list-style-type: decimal;
 }
-[data-aos^="fade"][data-aos^="fade"].aos-animate {
+[data-aos^='fade'][data-aos^='fade'].aos-animate {
   opacity: 1;
   transform: translateZ(0);
 }
@@ -734,15 +734,15 @@ user agent stylesheet ol {
   position: relative;
   margin-bottom: 1.5rem;
 }
-[data-aos][data-aos][data-aos-easing="ease"],
-body[data-aos-easing="ease"] [data-aos] {
+[data-aos][data-aos][data-aos-easing='ease'],
+body[data-aos-easing='ease'] [data-aos] {
   transition-timing-function: ease;
 }
-[data-aos][data-aos][data-aos-duration="400"],
-body[data-aos-duration="400"] [data-aos] {
+[data-aos][data-aos][data-aos-duration='400'],
+body[data-aos-duration='400'] [data-aos] {
   transition-duration: 0.4s;
 }
-[data-aos^="fade"][data-aos^="fade"] {
+[data-aos^='fade'][data-aos^='fade'] {
   opacity: 0;
   transition-property: opacity, transform;
 }
@@ -756,7 +756,7 @@ body[data-aos-duration="400"] [data-aos] {
   display: flex;
   align-items: center;
 }
-[data-aos="fade-left"] {
+[data-aos='fade-left'] {
   transform: translate3d(100px, 0, 0);
 }
 *,
@@ -778,7 +778,7 @@ user agent stylesheet li {
 user agent stylesheet ol {
   list-style-type: decimal;
 }
-[data-aos^="fade"][data-aos^="fade"].aos-animate {
+[data-aos^='fade'][data-aos^='fade'].aos-animate {
   opacity: 1;
   transform: translateZ(0);
 }
@@ -801,15 +801,15 @@ user agent stylesheet ol {
   position: relative;
   margin-bottom: 1.5rem;
 }
-[data-aos][data-aos][data-aos-easing="ease"],
-body[data-aos-easing="ease"] [data-aos] {
+[data-aos][data-aos][data-aos-easing='ease'],
+body[data-aos-easing='ease'] [data-aos] {
   transition-timing-function: ease;
 }
-[data-aos][data-aos][data-aos-duration="400"],
-body[data-aos-duration="400"] [data-aos] {
+[data-aos][data-aos][data-aos-duration='400'],
+body[data-aos-duration='400'] [data-aos] {
   transition-duration: 0.4s;
 }
-[data-aos^="fade"][data-aos^="fade"] {
+[data-aos^='fade'][data-aos^='fade'] {
   opacity: 0;
   transition-property: opacity, transform;
 }
@@ -823,7 +823,7 @@ body[data-aos-duration="400"] [data-aos] {
   display: flex;
   align-items: center;
 }
-[data-aos="fade-right"] {
+[data-aos='fade-right'] {
   transform: translate3d(-100px, 0, 0);
 }
 *,
@@ -845,19 +845,19 @@ user agent stylesheet li {
 user agent stylesheet ol {
   list-style-type: decimal;
 }
-[data-aos^="fade"][data-aos^="fade"].aos-animate {
+[data-aos^='fade'][data-aos^='fade'].aos-animate {
   opacity: 1;
   transform: translateZ(0);
 }
-[data-aos][data-aos][data-aos-easing="ease"],
-body[data-aos-easing="ease"] [data-aos] {
+[data-aos][data-aos][data-aos-easing='ease'],
+body[data-aos-easing='ease'] [data-aos] {
   transition-timing-function: ease;
 }
-[data-aos][data-aos][data-aos-duration="400"],
-body[data-aos-duration="400"] [data-aos] {
+[data-aos][data-aos][data-aos-duration='400'],
+body[data-aos-duration='400'] [data-aos] {
   transition-duration: 0.4s;
 }
-[data-aos^="fade"][data-aos^="fade"] {
+[data-aos^='fade'][data-aos^='fade'] {
   opacity: 0;
   transition-property: opacity, transform;
 }
@@ -871,7 +871,7 @@ body[data-aos-duration="400"] [data-aos] {
   display: flex;
   align-items: center;
 }
-[data-aos="fade-left"] {
+[data-aos='fade-left'] {
   transform: translate3d(100px, 0, 0);
 }
 *,
@@ -1066,4 +1066,190 @@ user agent stylesheet ol {
     width: calc(100% + 1.3px);
     height: 113px;
   }
+}
+.process-circle:empty.bg-primary {
+  background: rgba(219, 22, 47, 0.05) !important;
+}
+@media (min-width: 768px) {
+  .process-vertical li .process-circle {
+    margin-left: -1.5rem;
+  }
+}
+.process-vertical li .process-circle {
+  margin-right: 1.5rem;
+}
+.process-circle {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  display: flex;
+  flex-shrink: 0;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  color: #fff;
+  font-size: 1.125rem;
+}
+.bg-primary {
+  background-color: #db162f !important;
+}
+*,
+::after,
+::before {
+  box-sizing: border-box;
+}
+user agent stylesheet div {
+  display: block;
+}
+user agent stylesheet li {
+  text-align: -webkit-match-parent;
+}
+.process-vertical {
+  padding: 0;
+  width: 100%;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+}
+user agent stylesheet ol {
+  list-style-type: decimal;
+}
+/* ########## */
+@media (min-width: 768px) {
+  .process-vertical li:nth-child(even) .process-circle {
+    margin-right: -1.5rem;
+    margin-left: 1.5rem;
+  }
+}
+.process-circle:empty.bg-primary {
+  background: rgba(219, 22, 47, 0.05) !important;
+}
+@media (min-width: 768px) {
+  .process-vertical li .process-circle {
+    margin-left: -1.5rem;
+  }
+}
+.process-vertical li .process-circle {
+  margin-right: 1.5rem;
+}
+.process-circle {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  display: flex;
+  flex-shrink: 0;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  color: #fff;
+  font-size: 1.125rem;
+}
+.bg-primary {
+  background-color: #db162f !important;
+}
+*,
+::after,
+::before {
+  box-sizing: border-box;
+}
+user agent stylesheet div {
+  display: block;
+}
+@media (min-width: 768px) {
+  .process-vertical li:nth-child(even) {
+    flex-direction: row-reverse;
+    text-align: right;
+    margin-left: 0;
+    margin-right: 50%;
+  }
+}
+user agent stylesheet li {
+  text-align: -webkit-match-parent;
+}
+.process-vertical {
+  padding: 0;
+  width: 100%;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+}
+user agent stylesheet ol {
+  list-style-type: decimal;
+}
+@media (min-width: 768px) {
+  .process-vertical li:nth-child(even) .process-circle {
+    margin-right: -1.5rem;
+    margin-left: 1.5rem;
+  }
+}
+
+.process-circle:empty.bg-primary {
+  background: rgba(219, 22, 47, 0.05) !important;
+}
+@media (min-width: 768px) {
+  .process-vertical li .process-circle {
+    margin-left: -1.5rem;
+  }
+}
+.process-vertical li .process-circle {
+  margin-right: 1.5rem;
+}
+.process-circle {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  display: flex;
+  flex-shrink: 0;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  color: #fff;
+  font-size: 1.125rem;
+}
+.bg-primary {
+  background-color: #db162f !important;
+}
+*,
+::after,
+::before {
+  box-sizing: border-box;
+}
+user agent stylesheet div {
+  display: block;
+}
+@media (min-width: 768px) {
+  .process-vertical li:nth-child(even) {
+    flex-direction: row-reverse;
+    text-align: right;
+    margin-left: 0;
+    margin-right: 50%;
+  }
+}
+user agent stylesheet li {
+  text-align: -webkit-match-parent;
+}
+.process-vertical {
+  padding: 0;
+  width: 100%;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+}
+user agent stylesheet ol {
+  list-style-type: decimal;
+}
+/* ############ */
+.process-circle:empty.bg-primary:after {
+  background-color: #5f5b5e;
+}
+.process-circle:empty:after {
+  content: '';
+  width: 0.5rem;
+  height: 0.5rem;
+  border-radius: 50%;
+}
+*,
+::after,
+::before {
+  box-sizing: border-box;
 }
