--- a/shibex-soliders/src/components/css_files/testimonial.css
+++ b/shibex-soliders/src/components/css_files/testimonial.css
@@ -1,56 +1,3 @@
-/* head,
-body {
-  background-color: lightcyan;
-}
-
-.card-cont {
-  cursor: pointer;
-}
-
-.hd {
-  font-size: 25px;
-  font-weight: 550;
-}
-
-.card-cont.hover,
-.card-cont:hover {
-  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
-}
-
-.img {
-  margin-bottom: 35px;
-  -webkit-filter: drop-shadow(5px 5px 5px #222);
-  filter: drop-shadow(5px 5px 5px #222);
-}
-
-.card-title {
-  font-weight: 600;
-}
-
-button.focus,
-button:focus {
-  outline: 0;
-  box-shadow: none !important;
-}
-
-.ft {
-  margin-top: 25px;
-}
-
-.chk {
-  margin-bottom: 5px;
-}
-
-.rck {
-  margin-top: 20px;
-  padding-bottom: 15px;
-}
-*/
-/* .carousel-inner .carousel-item .carousel-caption {
-  position: relative;
-  top
-} */
-
 .testimonial-section {
   background-color: #fcd032;
   padding: 80px 0;
@@ -93,6 +40,11 @@ button:focus {
   bottom: 150px;
   font-family: var(--gameFont);
   font-weight: bolder;
+}
+@media (max-width: 575px) {
+  .testi-header {
+    margin-bottom: 1.8em;
+  }
 }
 .teamMates {
   font-weight: 900;
