--- a/shibex-soliders/src/components/css_files/testimonial.css
+++ b/shibex-soliders/src/components/css_files/testimonial.css
@@ -13,7 +13,7 @@
 .testi-img .circle {
   height: 360px;
   width: 360px;
-  background-color: rgb(12, 188, 167);
+  background-color: #369fe3;
   position: absolute;
   border-radius: 50%;
   left: 0;
