--- a/shibex-soliders/src/App.css
+++ b/shibex-soliders/src/App.css
@@ -2,7 +2,10 @@
 .App {
   background-color: rgb(54, 159, 227);
 }
-:root{
+:root {
   --gameFont: 'Orbitron', sans-serif;
   --gameFont2: 'Press Start 2P', cursive;
+  --yellowColor: #fcd032;
+  --blueColor: #369fe3;
+  --redColor: #cf0d0e;
 }
