--- a/shibex-soliders/src/components/css_files/socialInfo.css
+++ b/shibex-soliders/src/components/css_files/socialInfo.css
@@ -1,5 +1,4 @@
 .img-wrapper .shiba {
-  margin: 100px;
   padding-left: 10em;
   width: 35em;
 }
@@ -51,5 +50,81 @@
     width: 25em;
     position: relative;
     right: 12em;
+  }
+}
+@media only screen and (max-width: 576px) and (min-width: 350px) {
+  .img-wrapper .shiba {
+    position: relative;
+    width: 22em;
+    right: 5em;
+    bottom: 0.8em;
+    z-index: 10;
+  }
+  .btn-wrapper .socialBtn {
+    padding: 0.9em;
+    position: relative;
+    width: 8em;
+  }
+  .twitt-icon,
+  .tele-icon {
+    display: none;
+  }
+  .para .paragraph1 {
+    font-size: 10px;
+  }
+}
+@media only screen and (max-width: 768px) and (min-width: 577px) {
+  .img-wrapper .shiba {
+    position: relative;
+    width: 25em;
+    right: 1em;
+    bottom: 1em;
+    z-index: 10;
+  }
+  .para .paragraph1 {
+    font-size: 14px;
+    line-height: initial;
+  }
+  .btn-wrapper .socialBtn {
+    padding: 0.9em;
+    position: relative;
+    width: 8em;
+  }
+  .twitt-icon,
+  .tele-icon {
+    display: none;
+  }
+}
+@media only screen and (max-width: 992px) and (min-width: 770px) {
+  .img-wrapper .shiba {
+    position: relative;
+    width: 27em;
+    left: 5em;
+    bottom: 2em;
+    z-index: 10;
+  }
+}
+@media only screen and (max-width: 1200px) and (min-width: 993px) {
+  .img-wrapper .shiba {
+    position: relative;
+    width: 32em;
+    right: 8em;
+    bottom: 3em;
+  }
+  .shibaHouse {
+    margin-top: 5em;
+  }
+  .btn-wrapper .socialBtn {
+    padding: 0.9em;
+    position: relative;
+    bottom: 3em;
+  }
+  .para .paragraph1 {
+    font-size: 12px;
+    line-height: initial;
+  }
+  .headerTitle {
+    position: relative;
+    bottom: 32px;
   }
 }
