--- a/shibex-soliders-master/shibex-soliders-master/src/components/css_files/testimonial.css
+++ b/shibex-soliders-master/shibex-soliders-master/src/components/css_files/testimonial.css
@@ -49,7 +49,7 @@
 @media (max-width: 575px) {
   .testi-header {
     margin-bottom: 1.8em;
-    font-size: 3.5em;
+    font-size: 3em;
   }
 }
 .teamMates {
@@ -122,7 +122,7 @@
 .custom-shape-divider-top-1642534573 svg {
   position: relative;
   display: block;
-  /* width: calc(110% + 1.3px); */
+  width: calc(110% + 1.3px);
   height: 164px;
 }
 
