--- a/shibex-soliders-master/shibex-soliders-master/src/components/css_files/socialInfo.css
+++ b/shibex-soliders-master/shibex-soliders-master/src/components/css_files/socialInfo.css
@@ -41,7 +41,7 @@
 }
 
 /** For mobile devices **/
-@media (max-width: 767px) {
+/* @media (max-width: 767px) {
   .custom-shape-divider-top-1642533550 svg {
     width: calc(182% + 1.3px);
     height: 113px;
@@ -51,12 +51,12 @@
     position: relative;
     right: 12em;
   }
-}
+} */
 @media only screen and (max-width: 576px) and (min-width: 350px) {
   .img-wrapper .shiba {
     position: relative;
     width: 22em;
-    right: 5em;
+    right: 7.5em;
     bottom: 0.8em;
     z-index: 10;
   }
@@ -73,11 +73,12 @@
     font-size: 10px;
   }
 }
+
 @media only screen and (max-width: 768px) and (min-width: 577px) {
   .img-wrapper .shiba {
     position: relative;
     width: 25em;
-    right: 1em;
+    left: 2.5em;
     bottom: 1em;
     z-index: 10;
   }
@@ -93,6 +94,10 @@
   .twitt-icon,
   .tele-icon {
     display: none;
+  }
+  .custom-shape-divider-top-1642533550 svg {
+    width: calc(182% + 1.3px);
+    height: 113px;
   }
 }
 @media only screen and (max-width: 992px) and (min-width: 770px) {
