--- a/shibex_new/src/components/css_files/gamePlay.css
+++ b/shibex_new/src/components/css_files/gamePlay.css
@@ -26,7 +26,6 @@
   position: relative;
   top: 10px;
   left: 150px;
-  object-fit: cover;
   z-index: 10;
 }
 
@@ -34,7 +33,7 @@
 @media only screen and (max-width:400px) and (min-width: 350px) {
      .video-container .video {
     top: 10px;
-    left:1em;
+    left:2em;
     width: 300px;
     height: 180px;
    
@@ -48,7 +47,7 @@
 }
 
 @media only screen and (max-width: 450px) and (min-width: 401px) {
-      .video-container .video {
+    .video-container .video {
     top: 10px;
     left:2.5em;
     width: 300px;
@@ -69,16 +68,16 @@
 @media only screen and (max-width: 576px) and (min-width: 450px) {
    .video-container .video {
     top: 10px;
-    left: 4.5em;
+    left: 80px;
     width: 350px;
     height: 200px;
   } 
   .platBtn {
-    width: 15em;
-    height: 3em;
+    width: 12em;
+    height: 4em;
   }
   .platBtn .innerBtn {
-    font-size: 1.5em;
+    font-size: 1.3em;
     font-family: var(--gameFont);
     font-weight: bold;
   }
@@ -98,12 +97,29 @@
     top: 10px;
     left: 5px;
   }
+  
+  .platBtn {
+    width:13em;
+    height: 3em;
+margin-left: 1em;  }
+  .platBtn .innerBtn {
+    font-size: 1.3em;
+  }
 }
 @media only screen and (max-width: 1200px) and (min-width: 993px) {
   .video-container .video {
 width: 800px;
 height: 400px;  
 margin-left: -170px; 
+  }
+  
+  .platBtn {
+    width:16em;
+    height: 5em;
+    margin-right: 4em;
+  }
+  .platBtn .innerBtn {
+    font-size: 1.3em;
   }
 }
 @media only screen and (max-width: 1400px) and (min-width: 1201px) {
