--- a/shibex_new/src/components/css_files/timer.css
+++ b/shibex_new/src/components/css_files/timer.css
@@ -40,8 +40,12 @@ section {
   height: 14em;
   margin-left: 4em;
 }
-.container-fluid {
+/* .mobilePara {
+  display: none;
 }
+.mobileTimer {
+  display: none;
+} */
 @media screen and (max-width: 770px) and (min-width: 577px) {
   .timerBox {
     width: 25em;
@@ -82,6 +86,10 @@ section {
   .coming-soon {
     margin-right: 1.5em !important;
   }
+  /* .desktopPara,
+  .desktopTimer {
+    display: none;
+  } */
 }
 @media screen and (max-width: 992px) and (min-width: 771px) {
   .timerClock {
