--- a/shibex_new/src/App.css
+++ b/shibex_new/src/App.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron&family=Press+Start+2P&display=swap');
 .App {
-  background-color: rgb(54, 159, 227);
+  background-color: #212529;
 }
 :root {
   --gameFont: 'Orbitron', sans-serif;
@@ -8,4 +8,6 @@
   --yellowColor: #fcd032;
   --blueColor: #369fe3;
   --redColor: #cf0d0e;
+  --blackColor: #212529;
+  --whiteColor: #f8f9fa;
 }
