--- a/shibex_new/src/components/css_files/timer.css
+++ b/shibex_new/src/components/css_files/timer.css
@@ -2,7 +2,7 @@
   overflow: hidden;
 }
 .bg-primary-3 {
-  background-color: rgb(54, 159, 227) !important;
+  background-color: #212529 !important;
 }
 section {
   padding: 6rem 0;
@@ -25,8 +25,8 @@ section {
 }
 
 .timerPara {
-  font-family: var(--gameFont);
-  font-size: 1.5em;
+  font-family: var(--gameFont2);
+  font-size: 1.2em;
 }
 .timerDigits {
   font-family: var(--gameFont2);
